fix: vertical thumbnail bar on small screens

--- a/src/app.scss
+++ b/src/app.scss
@@ -180,7 +180,7 @@ $ig-shadow: 0 2px 2px lighten($ig-black, 10%);
     width: calc(100% - 115px); // 100px + 15px for margin
 
     @media (max-width: $ig-small-screen) {
-      width: calc(100% - 87px); // 81px + 6px for margin
+      width: calc(100% - 92px); // 81px + 11px for margin
     }
   }
   &.image-gallery-rtl {
